Bug 70062 - Crash on ungrouping an "as character" anchored group and re-anchoring one of its elements
Summary: Crash on ungrouping an "as character" anchored group and re-anchoring one of ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.2.2 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.5.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-03 09:15 UTC by Andrés Gómez García
Modified: 2015-02-11 12:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample document to reproduce the crash (8.66 KB, application/vnd.oasis.opendocument.text)
2013-10-03 09:15 UTC, Andrés Gómez García
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrés Gómez García 2013-10-03 09:15:43 UTC
Created attachment 87020 [details]
Sample document to reproduce the crash

Steps to reproduce:

In the attached document we have 2 shape groups:
 - group with squares, anchored "as character"
 - group with circles, not anchored "as character"

Grouped shapes anchored "as character" don't provide the possibility of ungrouping in the UI, however, follow the steps above:
 1. Select both groups (circles and squares) at the same time.
 2. Ungrouping option is now available. Click on it.
 3. The "as character" anchored group is now ungrouped. Select one of the square elements.
 4. Change the anchoring from "as character" to any of the other options.

OUTCOME:

LibreOffice crashes.



Reproducible in Ubuntu's Raring LibO 4.0.2.2 and in current upstream.
Comment 1 Owen Genat (retired) 2013-11-15 05:18:05 UTC
Confirmed under Crunchbang 11 linux running v4.1.3.2. Status set to NEW. Version set to 4.0.2.2 release due to description.
Comment 2 Commit Notification 2015-02-11 12:01:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a6a151c4b7c78a363fb64598fbda39db4f42d07

Related: tdf#70062 keep drawing anchor objects sorted

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-02-11 12:01:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=70f0b3917688e7c462917d97d39443d6e75502fb

Resolves: tdf#70062 avoid crash on ungrouping "ac char" group

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.