Related: tdf#70062 keep drawing anchor objects sorted

take attachment from tdf#70062, ungroup the bottom pair,
anchor as char the left one, anchor as char the right one

asserts with debugging stl on unsorted container

Change-Id: I3ae763f6d61445f9118ee573a98c69d7a6ee6e4b